--- a/4_CSS/css/default.css
+++ b/4_CSS/css/default.css
@@ -33,7 +33,7 @@ div[class*=i] {
     color: red;
 }
 
-/* 문제 : class속성값이 div-class인 요소들 중에서 name 속성값에 name3가 포함된 요소(배경 : pink) */
+/* 문제 : class속성값이 div-class인 요소들 중에서 name 속성값에 name3가 포함된 요소(배경 : pink)*/
 .div-class[name~=name3] {
     background: pink;
 
@@ -43,7 +43,7 @@ div[class*=i] {
 /*a>b : a요소의 자손들 중에서 b요소만 전부 선택*/
 /*아이디가 test1인 요소들의 자손들 중 h4만 선택*/
 #test1>h4 {
-    background: rgb(92, 86, 86);
+    background: black;
 }
 
 #test1>ul>li {
@@ -52,7 +52,7 @@ div[class*=i] {
 
 /*a b : a요소의 후손들 중에서 b요소 전부 선택*/
 #test1 li {
-    color: rgb(197, 108, 209);
+    color: aliceblue;
 }
 
 /*3. 동위선택자 */
@@ -61,7 +61,7 @@ div[class*=i] {
 }
 
 #test2+ul {
-    background-color: rgb(107, 107, 49);
+    background-color: yellow;
 }
 
 /*바로 뒤에 있는 요소가 아니기 때문에 선택 x */
@@ -78,15 +78,15 @@ div[class*=i] {
 
 /*4. 반응선택자----------------*/
 .area {
-    background-color: rgb(113, 72, 189);
+    background: yellowgreen;
     width: 100px;
-    height: 50px;
+    height: 100px;
     cursor: pointer;
-    /*cursor: pointer; 마우스 커서가 요소 위에서 손가락 모양(포인터 모양)으로 변경*/
+
 }
 
 #active-test:active {
-    background-color: rgb(42, 165, 79);
+    background-color: brown;
     color: red;
 
 }
@@ -98,36 +98,26 @@ div[class*=i] {
 
 }
 
-
-
 /*5. 상태선택자*/
-/* 1) */
 input[type=checkbox]:checked {
-
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
 }
 
 input[type=checkbox]:checked+label {
     font-size: 20px;
-    color: green;
-    font-weight: 900;
 }
 
-
-/* 2) */
 input[name^=user]:focus {
     background-color: pink;
 }
 
-/* 3) */
 button:enabled {
     background-color: greenyellow;
 }
 
 button:disabled {
     background-color: red;
-    color: azure;
     opacity: 0.6;
     /*투명도*/
 }
